manifests/prod/replica-count-calculator-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-backend-deployment
spec:
  replicas: 10
  template:
    spec:
      containers:
        - name: calculator-backend
