manifests/prod/replica-count-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-deployment
spec:
  replicas: 10
