manifests/prod/cluster-ip-calculator-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-api-service
spec:
  selector:
    app: calculator-api-pods
  ports:
  - port: 8001
    targetPort: 8001
