manifests/prod/cluster-ip-calculator-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-backend-service
spec:
  selector:
    app: calculator-backend-pods
  ports:
  - port: 8002
    targetPort: 8002
