manifests/prod/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
spec:
  type: ClusterIP
  selector:
    app: engine-pods
  ports:
    - port: 50009
      targetPort: 8080
